# gblsr

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
scripts/: decode.py  encode.py  eval.py  measure_latency.py  reconstruct.py  train.py
src/gblsr/: __init__.py
src/gblsr/asr/: __init__.py  coord.py  decoder.py  model.py
src/gblsr/cli/: __init__.py  decode.py  encode.py  eval.py  latency.py  reconstruct.py  train.py
src/gblsr/data/: __init__.py  loaders.py
src/gblsr/encoders/: __init__.py  rdn.py
src/gblsr/latency/: __init__.py  protocol.py
src/gblsr/metrics/: __init__.py  quality.py
src/gblsr/models/: __init__.py  arms.py  basis.py  shape_utils.py
src/gblsr/training/: __init__.py  losses.py  trainer.py
tests/: test_asr.py  test_cli.py  test_data_loaders.py  test_example_config.py  test_latency.py  test_models_arms.py  test_models_basis.py  test_models_shape_utils.py  test_public_api.py  test_rdn_encoder.py  test_smoke.py  test_trainer_e2e.py  test_training_losses.py
